--- a/config.org
+++ b/config.org
@@ -2632,10 +2632,11 @@ Also, add them faces so they stick out more:
 
 #+begin_src emacs-lisp :tangle yes
 (after! org
+  (custom-declare-face '+org-todo-wait  '((t (:inherit (bold mode-line-emphasis org-todo)))) "")
   (setq org-todo-keywords '((sequence "TODO(t)" "NEXT(n)" "PROJ(p)" "WAIT(w)" "IDEA(i)" "EVENT(e)" "|"
                                       "DONE(d)" "CANCELLED(c)"))
         org-todo-keyword-faces '(("NEXT"      . +org-todo-active)
-                                 ("WAIT"      . bold)
+                                 ("WAIT"      . +org-todo-wait)
                                  ("EVENT"     . +org-todo-onhold)
                                  ("PROJ"      . +org-todo-project)
                                  ("CANCELLED" . +org-todo-cancel))))
