feat(topspace): More blacklisted modes

--- a/config.org
+++ b/config.org
@@ -3285,8 +3285,13 @@ We create a =blacklist= of sorts to deactivate ~topspace-mode~ in special modes.
                      +doom-dashboard-mode
                      pdf-view-mode
                      kubernetes-overview-mode
+                     kubernetes-log-line-mode
+                     kubernetes-logs-mode
+                     kubernetes-display-thing-mode
                      magit-status-mode
                      telega-root-mode
+                     telega-image-mode
+                     image-mode
                      dtache-compilation-mode
                      elfeed-search-mode
                      elfeed-show-mode
