--- a/config.org
+++ b/config.org
@@ -3376,23 +3376,17 @@ We create a =blacklist= of sorts to deactivate ~topspace-mode~ in special modes.
                              'comint-mode
                              'org-agenda-mode
                              '+doom-dashboard-mode
-                             'pdf-view-mode
-                             'kubernetes-overview-mode
-                             'kubernetes-log-line-mode
-                             'kubernetes-logs-mode
-                             'kubernetes-display-thing-mode
-                             'magit-status-mode
+                             'kubernetes-mode
+                             'magit-mode
                              'telega-root-mode
-                             'telega-image-mode
+                             'telega-chat-mode
                              'image-mode
                              'Custom-mode
-                             'dtache-compilation-mode
+                             'compilation-mode
                              'elfeed-search-mode
                              'elfeed-show-mode
-                             'shell-mode
                              'cfw:calendar-mode
-                             'special-mode
-                             'telega-chat-mode)))))
+                             'special-mode)))))
 #+end_src
 
 *** Topsy
