doc: Adding witticisms

--- a/config.org
+++ b/config.org
@@ -292,6 +292,7 @@ rather install it standalone.
 
 #+begin_src emacs-lisp :tangle init.el
 (doom! :input
+       ;;bidi              ; (tfel ot) thgir etirw uoy gnipleh
        ;;chinese
        ;;japanese
        ;;layout            ; auie,ctsrnm is the superior home row
